--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,8 +11,8 @@ jobs:
     docker:
       - image: cimg/base:stable
     steps:
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+      # Add steps to the job
+      # See: https://circleci.com/docs/2.0/configuration-reference/#steps
       - checkout
       - run: apk add npm
       - run: npm ci
@@ -22,6 +22,6 @@ jobs:
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  build-and-deploy
+  build-and-deploy:
     jobs:
       - build-that-sucker
