--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,21 +1,37 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine.
 # See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-orbs:
-  node: circleci/node@5.0.2
 
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
   build-that-sucker:
-    executor: node/default
+    docker:
+      - image: cimg/node:16.13.2
     steps:
       # Add steps to the job
       # See: https://circleci.com/docs/2.0/configuration-reference/#steps
       - checkout
-      - run: npm ci
-      - run: npm run test
-      - run: npm run build
+      - run:
+          name: Update NPM
+          command: "sudo npm install -g npm"
+      - restore_cache:
+          key: dependency-cache-{{ checksum: "package-lock.json" }}
+      - run: 
+          name: Install Dependencies
+          command: npm ci
+      - save_cache:
+          key: dependency-cache-{{ checksum: "package-lock.json" }}
+          paths:
+            - ./node_modules
+      - run: 
+          name: Build app
+          command: npm run build
+      - save_cache:
+          key: app-build-cache-{{ .Branch }}
+          paths:
+            - ./build
+        
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
