--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/prettier": "^2.6.3",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "@types/react-resizable": "^3.0.1",
     "axios": "^0.27.2",
     "esbuild-wasm": "0.8.27",
     "localforage": "^1.10.0",
@@ -19,6 +20,7 @@
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-resizable": "^3.0.4",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
