--- a/package.json
+++ b/package.json
@@ -4,25 +4,28 @@
   "private": true,
   "dependencies": {
     "@monaco-editor/react": "3.7.5",
+    "@reduxjs/toolkit": "latest",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.41",
-    "@types/prettier": "^2.6.3",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
-    "@types/react-resizable": "^3.0.1",
-    "axios": "^0.27.2",
+    "@uiw/react-md-editor": "2.1.1",
+    "axios": "0.21.1",
     "esbuild-wasm": "0.8.27",
     "localforage": "^1.10.0",
     "monaco-editor": "^0.33.0",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
     "react-resizable": "^3.0.4",
     "react-scripts": "5.0.1",
+    "redux": "^4.1.0",
+    "redux-injectors": "^1.3.0",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "1.1.3",
+    "tailwindcss": "^3.1.3",
     "typescript": "^4.7.4",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -50,9 +53,17 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.11.41",
+    "@types/prettier": "^2.6.3",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
+    "@types/react-redux": "7.1.15",
+    "@types/react-resizable": "^3.0.1",
+    "@types/redux-logger": "^3.0.9",
+    "@types/uuid": "^8.3.4",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
-    "prettier-plugin-tailwindcss": "^0.1.11",
-    "tailwindcss": "^3.1.3"
+    "prettier-plugin-tailwindcss": "^0.1.11"
   }
 }
